Shift x axis down to prevent time period ticks jostling first y axis value

--- a/src/app/static/src/scss/partials/genericChart.scss
+++ b/src/app/static/src/scss/partials/genericChart.scss
@@ -20,3 +20,7 @@
   margin: auto;
   border: 1px solid #adb5bd;
 }
+
+.xaxislayer-above {
+  transform: translateY(6px);
+}
